test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/multiple_impl/src/testlib.sw
library;

use core::codec::*;

pub fn foo() {
    log(1);
}
