test/src/e2e_vm_tests/test_programs/should_fail/module_privacy/src/beta.sw
library;

mod gamma;

// pub use gamma::foo as gamma_foo;
// Error: gamma::bar is private
// pub use gamma::bar as gamma_bar;

pub fn foo() {}
fn bar() {}
